force-app/main/default/objects/NCSCOrder__c/NCSCOrder__c.object-meta.xml
<CustomObject>
    <description>Represents Order returned by searchOrders service, Name == orderNumber</description>
    <label>Discrepancy Order</label>
    <nameField>
        <label>Order Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Discrepancy Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>