force-app/main/default/objects/NCSCOrder__c/fields/AAC__c.field-meta.xml
<CustomField>
    <fullName>AAC__c</fullName>
    <description>Activity Address Code

Source table: rod / csc_mst 
Source column: rod_aac_id / csc_mst_aac
Web service name: Order Service(CSC)
Web service field: SALE_BY_ORD_NR.SALE_AAC</description>
    <label>AAC</label>
    <length>6</length>
    <type>Text</type>
</CustomField>