force-app/main/default/objects/NCSCOrder__c/fields/ACC__c.field-meta.xml
<CustomField>
    <fullName>ACC__c</fullName>
    <description>Source table:  csc_mst
Source column: csc_mst_acc
Web service name:Order Service(CSC)
Web service field:</description>
    <label>ACC</label>
    <length>6</length>
    <type>Text</type>
</CustomField>