force-app/main/default/objects/NCSCOrder__c/fields/Access_Code__c.field-meta.xml
<CustomField>
    <fullName>Access_Code__c</fullName>
    <description>AAC Access Code</description>
    <label>Access Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>