force-app/main/default/objects/NCSCOrder__c/fields/Address_Type_Description__c.field-meta.xml
<CustomField>
    <fullName>Address_Type_Description__c</fullName>
    <description>fas.gsa.gov/services/Order/v1.0 AddressType Description</description>
    <label>Address Type Description</label>
    <length>40</length>
    <type>Text</type>
</CustomField>