force-app/main/default/objects/NCSCOrder__c/fields/Address_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Address_Type_Name__c</fullName>
    <description>fas.gsa.gov/services/Order/v1.0 AddressType Name</description>
    <label>Address Type Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>