force-app/main/default/objects/NCSCOrder__c/fields/Address_Type_Status__c.field-meta.xml
<CustomField>
    <fullName>Address_Type_Status__c</fullName>
    <description>fas.gsa.gov/services/Order/v1.0 AddressType Status</description>
    <label>Address Type Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>