force-app/main/default/objects/NCSCOrder__c/fields/Carrier_Name__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Name__c</fullName>
    <description>fas.gsa.gov/services/Order/v1.0 Carrier Name</description>
    <label>Carrier Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>