force-app/main/default/objects/NCSCOrder__c/fields/Carrier_Tracking_Freight_On_Board_Code__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Tracking_Freight_On_Board_Code__c</fullName>
    <description>fas.gsa.gov/services/Order/v1.0 Carrier Tracking Freight On Board Code</description>
    <label>Carrier Tracking Freight On Board Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>