force-app/main/default/objects/NCSCOrder__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Discrepancy Orders</relationshipLabel>
    <relationshipName>Discrepancy_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>