force-app/main/default/objects/NCSCOrder__c/fields/Closed_date__c.field-meta.xml
<CustomField>
    <fullName>Closed_date__c</fullName>
    <description>Source table: rod / csc_mst 
Source column: rod_cls_dte / csc_mst_cls_dte
Web service: name: N/A
Web service field: N/A</description>
    <label>Closed date</label>
    <type>Date</type>
</CustomField>