force-app/main/default/objects/NCSCOrder__c/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <description>The name of the ordering company/agency</description>
    <label>Company Name</label>
    <length>32</length>
    <type>Text</type>
</CustomField>