force-app/main/default/objects/NCSCOrder__c/fields/Customer_Email_Flag__c.field-meta.xml
<CustomField>
    <fullName>Customer_Email_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Source table: rod
Source column: rod_cust_email_flg
Web service: name N/A
Web service field:  N/A</description>
    <label>Customer  Email Flag</label>
    <type>Checkbox</type>
</CustomField>