force-app/main/default/objects/NCSCOrder__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Source table:  rod / csc_mst
Source column: rod_poc_eml_adr / csc_mst_poc_eml_adr
Web service: name: Contact service(ACIS)
Web service field: e_mail</description>
    <label>Email</label>
    <length>75</length>
    <type>Text</type>
</CustomField>