force-app/main/default/objects/NCSCOrder__c/fields/Export_Type__c.field-meta.xml
<CustomField>
    <fullName>Export_Type__c</fullName>
    <description>fas.gsa.gov/services/Order/v1.0</description>
    <label>Export Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>