force-app/main/default/objects/NCSCOrder__c/fields/Fax__c.field-meta.xml
<CustomField>
    <fullName>Fax__c</fullName>
    <description>Source table: rod / csc_mst 
Source column: rod_poc_fax_nbr / csc_mst_poc_fax_nbr
Web service: name: Contact service(ACIS)
Web service field: fax</description>
    <label>Fax</label>
    <type>Phone</type>
</CustomField>