force-app/main/default/objects/NCSCOrder__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <description>Source table: rod / csc_mst
Source column: rod_poc_fst_nam / csc_mst_poc_fst_nam
Web service name: Contact service(ACIS)
Web service field:  name_last</description>
    <label>First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>