force-app/main/default/objects/NCSCOrder__c/fields/Follow_up_Flag__c.field-meta.xml
<CustomField>
    <fullName>Follow_up_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Source table: rod 
Source column: rod_foll_up_flg
Web service: name :N/A
Web service field: N/A</description>
    <label>Follow up Flag</label>
    <type>Checkbox</type>
</CustomField>