force-app/main/default/objects/NCSCOrder__c/fields/FSS19_m_s__c.field-meta.xml
<CustomField>
    <fullName>FSS19_m_s__c</fullName>
    <label>M-S</label>
    <length>1</length>
    <type>Text</type>
</CustomField>