force-app/main/default/objects/NCSCOrder__c/fields/FSS19_sig__c.field-meta.xml
<CustomField>
    <fullName>FSS19_sig__c</fullName>
    <label>SIG</label>
    <length>1</length>
    <type>Text</type>
</CustomField>