force-app/main/default/objects/NCSCOrder__c/fields/FSS19_sup_add__c.field-meta.xml
<CustomField>
    <fullName>FSS19_sup_add__c</fullName>
    <label>SUPADD</label>
    <length>6</length>
    <type>Text</type>
</CustomField>