force-app/main/default/objects/NCSCOrder__c/fields/FSS19_Unit_Code__c.field-meta.xml
<CustomField>
    <fullName>FSS19_Unit_Code__c</fullName>
    <label>Unit Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>