force-app/main/default/objects/NCSCOrder__c/fields/Fulfillment_Method_Name__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Method_Name__c</fullName>
    <description>fas.gsa.gov/services/Order/v1.0</description>
    <label>Fulfillment Method Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>