force-app/main/default/objects/NCSCOrder__c/fields/Interested_Party_Email__c.field-meta.xml
<CustomField>
    <fullName>Interested_Party_Email__c</fullName>
    <description>Source table:  rod
Source column: rod_interested_party_eml
Web service name: N/A
Web service field: N/A</description>
    <label>Interested Party Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>