force-app/main/default/objects/NCSCOrder__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <description>Source table: rod / csc_mst 
Source column: rod_poc_lst_nam / csc_mst_poc_lst_nam
Web service name: Contact service(ACIS)
Web service field: name_first</description>
    <label>Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>