force-app/main/default/objects/NCSCOrder__c/fields/Last_Rejected_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Rejected_Date__c</fullName>
    <description>Source table: rod / csc_mst
Source column: rod_rev_last_rej_dte / csc_mst_rev_last_rej_dte
Web service: name:  N/A
Web service field: N/A</description>
    <label>Last  Rejected Date</label>
    <type>Date</type>
</CustomField>