force-app/main/default/objects/NCSCOrder__c/fields/Manager_Approved_date__c.field-meta.xml
<CustomField>
    <fullName>Manager_Approved_date__c</fullName>
    <description>Source table: rod / csc_mst
Source column: rod_mgr_apr_dte / csc_mst_mgr_apr_dte
Web service name:N/A
Web service field: N/A</description>
    <label>Manager Approved date</label>
    <type>Date</type>
</CustomField>