force-app/main/default/objects/NCSCOrder__c/fields/NCSC_WIP_Date__c.field-meta.xml
<CustomField>
    <fullName>NCSC_WIP_Date__c</fullName>
    <description>Source table: rod / csc_mst
Source column: rod_ncsc_wip_dte / csc_mst_ncsc_wip_dte
Web service name: N/A
Web service field: N/A</description>
    <label>NCSC WIP Date</label>
    <type>Date</type>
</CustomField>