force-app/main/default/objects/NCSCOrder__c/fields/Order_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Date__c</fullName>
    <description>Date the order was placed


Source table: csc_mst 
Source column: csc_mst_ord_dte
Web service: name : Order Service(CSC)
Web service field: SALE_BY_ORD_NR.SALE_GREG_DATE</description>
    <label>Order Date</label>
    <type>Date</type>
</CustomField>