force-app/main/default/objects/NCSCOrder__c/fields/Order_Number_Scope__c.field-meta.xml
<CustomField>
    <fullName>Order_Number_Scope__c</fullName>
    <description>Returned by fas.gsa.gov/services/Order/v1.0</description>
    <label>Order Number Scope</label>
    <length>10</length>
    <type>Text</type>
</CustomField>