force-app/main/default/objects/NCSCOrder__c/fields/Order_Number_Suffix__c.field-meta.xml
<CustomField>
    <fullName>Order_Number_Suffix__c</fullName>
    <label>Order Number Suffix</label>
    <length>3</length>
    <type>Text</type>
</CustomField>