force-app/main/default/objects/NCSCOrder__c/fields/Originated_date__c.field-meta.xml
<CustomField>
    <fullName>Originated_date__c</fullName>
    <description>Source table: rod / csc_mst 
Source column: rod_ssr_ori_dte / csc_mst_ssr_ori_dte
Web service: name: N/A
Web service field:  N/A</description>
    <label>Originated date</label>
    <type>Date</type>
</CustomField>