force-app/main/default/objects/NCSCOrder__c/fields/Originated_User__c.field-meta.xml
<CustomField>
    <fullName>Originated_User__c</fullName>
    <description>Source table: rod / csc_mst
Source column: rod_ssr_ori_usr /csc_mst_ssr_ori_usr
Web service: name: N/A
Web service field: N/A</description>
    <label>Originated User</label>
    <length>2</length>
    <type>Text</type>
</CustomField>