force-app/main/default/objects/NCSCOrder__c/fields/Packing_Facility_Description__c.field-meta.xml
<CustomField>
    <fullName>Packing_Facility_Description__c</fullName>
    <description>fas.gsa.gov/services/Order/v1.0</description>
    <label>Packing Facility Description</label>
    <length>40</length>
    <type>Text</type>
</CustomField>