force-app/main/default/objects/NCSCOrder__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Order delivery contact phone number

Source table: rod / csc_mst 
Source column: rod_poc_phn_nbr / csc_mst_poc_phn_nbr
Web service: name: Contact service(ACIS)
Web service field: phone</description>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>