force-app/main/default/objects/NCSCOrder__c/fields/PIN__c.field-meta.xml
<CustomField>
    <fullName>PIN__c</fullName>
    <description>Identification number used in conjunction with the AAC Also called Access code or ACC</description>
    <inlineHelpText>Identification number used in conjunction with the AAC Also called Access code or ACC</inlineHelpText>
    <label>PIN</label>
    <length>6</length>
    <type>Text</type>
</CustomField>