force-app/main/default/objects/NCSCOrder__c/fields/PO_Num__c.field-meta.xml
<CustomField>
    <fullName>PO_Num__c</fullName>
    <label>PO Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>