force-app/main/default/objects/NCSCOrder__c/fields/Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Received_Date__c</fullName>
    <description>Source table: rod / csc_mst
Source column: rod_dte_rec / csc_mst_dte_rec
Web service: name: N/A
Web service field: N/A</description>
    <label>Received Date</label>
    <type>Date</type>
</CustomField>