force-app/main/default/objects/NCSCOrder__c/fields/RecordTypeTemp__c.field-meta.xml
<CustomField>
    <fullName>RecordTypeTemp__c</fullName>
    <formula>$RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RecordTypeTemp</label>
    <type>Text</type>
</CustomField>