force-app/main/default/objects/NCSCOrder__c/fields/Rep_Approval__c.field-meta.xml
<CustomField>
    <fullName>Rep_Approval__c</fullName>
    <description>Source table: rod / csc_mst 
Source column: rod_ssr_apr_usr / csc_mst_rep_apr_usr
Web service name:N/A
Web service field: N/A</description>
    <label>Rep Approval</label>
    <length>2</length>
    <type>Text</type>
</CustomField>