force-app/main/default/objects/NCSCOrder__c/fields/Rep_Approved_date__c.field-meta.xml
<CustomField>
    <fullName>Rep_Approved_date__c</fullName>
    <description>Source table: rod / csc_mst
Source column: rod_ssr_apr_dte / csc_mst_rep_apr_dte
Web service name: N/A
Web service field: N/A</description>
    <label>Rep Approved date</label>
    <type>Date</type>
</CustomField>