force-app/main/default/objects/NCSCOrder__c/fields/Requisition_Number__c.field-meta.xml
<CustomField>
    <fullName>Requisition_Number__c</fullName>
    <description>NCSC - FSS19 Requisition Number

Source table: rod / csc_mst
Source column: rod_req_nbr  /  csc_mst_tck_nbr 
Web service name:Input to Order Service(FSS19/CSC)
Web service field: N/A</description>
    <label>Requisition Number</label>
    <length>14</length>
    <type>Text</type>
</CustomField>