force-app/main/default/objects/NCSCOrder__c/fields/Requisition_Suffix__c.field-meta.xml
<CustomField>
    <fullName>Requisition_Suffix__c</fullName>
    <description>Requisition Suffix to lookup order information on FSS 19.</description>
    <label>Suffix</label>
    <length>1</length>
    <type>Text</type>
</CustomField>