force-app/main/default/objects/NCSCOrder__c/fields/Review_Closed_date__c.field-meta.xml
<CustomField>
    <fullName>Review_Closed_date__c</fullName>
    <description>Source table: rod / csc_mst
Source column: rod_rev_cls_dte / csc_mst_rev_cls_dte
Web service: name: N/A
Web service field: N/A</description>
    <label>Review Closed date</label>
    <type>Date</type>
</CustomField>