force-app/main/default/objects/NCSCOrder__c/fields/Review_Flag__c.field-meta.xml
<CustomField>
    <fullName>Review_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Source table:   rod / csc_mst
Source column: rod_rev_flg / csc_mst_rev_flg
Web service: name:  N/A
Web service field: N/A</description>
    <label>Review Flag</label>
    <type>Checkbox</type>
</CustomField>