force-app/main/default/objects/NCSCOrder__c/fields/Session_Number__c.field-meta.xml
<CustomField>
    <fullName>Session_Number__c</fullName>
    <description>NCSC - Advantage Session Number
Source table: csc_mst
Source column: csc_mst_ses_nbr
Web service name: Order Service(ACIS)
Web service field: N/A</description>
    <label>Session Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>