force-app/main/default/objects/NCSCOrder__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>2 character order delivery state code</description>
    <label>State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>