force-app/main/default/objects/NCSCOrder__c/fields/Store_Location_Description__c.field-meta.xml
<CustomField>
    <fullName>Store_Location_Description__c</fullName>
    <label>Store Location Description</label>
    <length>30</length>
    <type>Text</type>
</CustomField>