force-app/main/default/objects/NCSCOrder__c/fields/Street_Address_2__c.field-meta.xml
<CustomField>
    <fullName>Street_Address_2__c</fullName>
    <description>Order delivery street address line 2</description>
    <label>Street Address 2</label>
    <length>32</length>
    <type>Text</type>
</CustomField>