force-app/main/default/objects/NCSCOrder__c/fields/Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Street_Address__c</fullName>
    <description>Order delivery street address line 1</description>
    <label>Street Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>