force-app/main/default/objects/NCSCOrder__c/fields/Superviso_Approved_date__c.field-meta.xml
<CustomField>
    <fullName>Superviso_Approved_date__c</fullName>
    <description>Source table: rod / csc_mst
Source column: rod_sup_apr_dte / csc_mst_sup_apr_dte
Web service name:N/A
Web service field: N/A</description>
    <label>Superviso Approved date</label>
    <type>Date</type>
</CustomField>