force-app/main/default/objects/NCSCOrder__c/fields/Surcharge_Code__c.field-meta.xml
<CustomField>
    <fullName>Surcharge_Code__c</fullName>
    <description>fas.gsa.gov/services/Order/v1.0 Order surchargeCode</description>
    <label>Surcharge Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>