force-app/main/default/objects/NCSCOrder__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Source table: rod / csc_mst
Source column: rod_typ / csc_mst_typ
Web service: name: N/A
Web service field:  N/A</description>
    <label>Type</label>
    <length>1</length>
    <type>Text</type>
</CustomField>