force-app/main/default/objects/NCSCOrder__c/fields/User_Assign_Counter__c.field-meta.xml
<CustomField>
    <fullName>User_Assign_Counter__c</fullName>
    <description>Source table: rod 
Source column:  rod_user_assign_counter
Web service: name: N/A
Web service field:  N/A</description>
    <label>User Assign Counter</label>
    <length>10</length>
    <type>Text</type>
</CustomField>